Modificando el index

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         
         <div class="container-md">
-          <p class="text-center" id="texto-redes">Corparte Sudoku de Colores en tus redes sociales</p>
+          <p class="text-center" id="texto-redes">Comparte Sudoku de Colores en tus redes sociales</p>
           <div class="iconos-redes-sociales">
             <a href="https://es-es.facebook.com/login/" target="_blank" rel="noopener noreferrer">
               <i class="bi bi-facebook"></i>
@@ -106,7 +106,7 @@
           </div>
           
           <h3 class="text-success">Sudoku de colores, es un juego para niños, adultos y mayores, que quieran o necesiten mejorar su memoria, su concentracion, su atención y su razonamiento lógico.</h3>
-          <h2 class="text-danger">1.Mejora la capicidad de resolución de problemas.</h2>
+          <h2 class="text-danger">1.Mejora la capacidad de resolución de problemas.</h2>
           <h2 class="link-success">2.Mejora la concentración</h2>
           <h2 class="link-primary">3.Mejora de la memoria</h2>
           <h2 class="link-warning">4.Mejora la capacidad de planificacion y organización</h2>
